--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=localhost;Port=5432;Database=book_db;UserName=postgres;Password=12345;"
+  },
+  "ConnectionString": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=customer_db;UserName=postgres;Password=12345;"
+  }
 }
